# IntroToAIProjects

./: .gitignore  8puzzle.cpp  CMakeLists.txt  README.md  large_dataset_backward_elimination_output.txt  main.cpp  output.txt  visualizer.html
8_Puzzle_Solver/: .gitignore  CMakeLists.txt  README.md  a.out  main.cpp
8_Puzzle_Solver/header/: Heuristics.hpp  Search.hpp  globals.hpp
8_Puzzle_Solver/src/: Heuristics.cpp  Puzzle.cpp  Search.cpp  globals.cpp
Dataset_Feature_Selection/: README.md  large_dataset_backward_elimination_output.txt  large_dataset_forward_selection_output.txt  main.cpp  output.txt
docs/: visualizer.html
header/: Puzzle.hpp  Search.hpp  globals.hpp
src/: Puzzle.cpp  Search.cpp  globals.cpp
visualizer/: visualizer.html
